--- a/src/main/java/Graphics.form
+++ b/src/main/java/Graphics.form
@@ -3,40 +3,28 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="554" height="824"/>
+      <xy x="20" y="20" width="859" height="859"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="d7423" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d7423" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="550" height="820"/>
-            <preferred-size width="550" height="900"/>
-            <maximum-size width="600" height="900"/>
+            <minimum-size width="855" height="855"/>
+            <preferred-size width="855" height="855"/>
+            <maximum-size width="855" height="855"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-26215"/>
+          <background color="-7403510"/>
+          <enabled value="false"/>
           <focusTraversalPolicyProvider value="true"/>
+          <foreground color="-1"/>
         </properties>
         <border type="none"/>
         <children>
-          <component id="83fb6" class="javax.swing.JTextPane" binding="textPane1" default-binding="true">
-            <constraints>
-              <grid row="1" column="2" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="200" height="200"/>
-                <preferred-size width="200" height="200"/>
-                <maximum-size width="200" height="200"/>
-              </grid>
-            </constraints>
-            <properties>
-              <background color="-256"/>
-              <editable value="false"/>
-              <foreground color="-65536"/>
-            </properties>
-          </component>
           <component id="45d26" class="javax.swing.JButton" binding="pokreniIgruButton" default-binding="true">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -45,31 +33,69 @@
               <text value="Pokreni Igru"/>
             </properties>
           </component>
-          <component id="d6f67" class="javax.swing.JTextPane" binding="textPane3" default-binding="true">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="200" height="200"/>
-                <preferred-size width="200" height="200"/>
-                <maximum-size width="200" height="200"/>
-              </grid>
-            </constraints>
-            <properties>
-              <editable value="false"/>
-            </properties>
-          </component>
           <grid id="5a8db" binding="p2" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <minimum-size width="100" height="800"/>
-                <preferred-size width="100" height="800"/>
-                <maximum-size width="100" height="800"/>
+              <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="150" height="800"/>
+                <preferred-size width="150" height="800"/>
+                <maximum-size width="150" height="800"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-14785601"/>
+            </properties>
             <border type="none"/>
             <children/>
           </grid>
+          <component id="d6f67" class="javax.swing.JTextPane" binding="textPane3" default-binding="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="450" height="300"/>
+                <preferred-size width="450" height="300"/>
+                <maximum-size width="450" height="300"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-14785601"/>
+              <editable value="false"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="47fce" class="javax.swing.JTextPane" binding="textPane2" default-binding="true">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="600" height="-1"/>
+                <preferred-size width="600" height="50"/>
+                <maximum-size width="600" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-14785601"/>
+              <editable value="false"/>
+              <enabled value="true"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <vspacer id="de026">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+          <component id="83fb6" class="javax.swing.JTextPane" binding="textPane1" default-binding="true">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="450" height="300"/>
+                <preferred-size width="450" height="300"/>
+                <maximum-size width="450" height="300"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-10263785"/>
+              <editable value="false"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
